--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,6 @@ buildscript {
 		springBootVersion = '2.0.1.RELEASE'
 	}
 	repositories {
-		mavenLocal()
-		maven {
-			name "aliyun1"
-			url 'http://maven.aliyun.com/nexus/content/groups/public'
-		}
-		maven {
-			name "aliyun2"
-			url 'http://maven.aliyun.com/mvn/repository/'
-		}
 		mavenCentral()
 	}
 	dependencies {
@@ -25,11 +16,11 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.yuuyoo'
+version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 bootJar {
 	baseName = 'eureka'
-
 	manifest {
 		attributes 'Implementation-Title': baseName,
 				'Implementation-Version': version,
@@ -40,16 +31,8 @@ bootJar {
 }
 
 repositories {
-	mavenLocal()
-	maven {
-		name "aliyun1"
-		url 'http://maven.aliyun.com/nexus/content/groups/public'
-	}
-	maven {
-		name "aliyun2"
-		url 'http://maven.aliyun.com/mvn/repository/'
-	}
 	mavenCentral()
+	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
 }
 
@@ -59,12 +42,8 @@ ext {
 }
 
 dependencies {
-	compile(
-			'org.springframework.boot:spring-boot-starter-web',
-			'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server',
-			'org.springframework.cloud:spring-cloud-starter-config',
-			//'com.yuuyoo:spring-boot-starter-logging:0.0.1-SNAPSHOT'
-	)
+	compile('org.springframework.boot:spring-boot-starter-actuator')
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-server')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
